// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio inputProps should pass through other props to the input 1`] = `
<div
  className=""
>
  <label
    className="Radio__label"
    htmlFor="testRadio"
  >
    <input
      checked={true}
      className="Radio__input"
      data-automation="first-name-field"
      id="testRadio"
      onChange={[Function]}
      type="radio"
    />
    <svg
      className="Radio__svg"
      focusable="false"
      viewBox="0 0 200 200"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="Radio__circle Radio__circle_isHover"
        cx="100"
        cy="100"
        r="100"
      />
      <circle
        className="Radio__circle Radio__circle_isSelected"
        cx="100"
        cy="100"
        r="100"
      />
    </svg>
    <Text
      baseline={false}
      className="Radio__labelText"
      raw={true}
    >
      Still in role
    </Text>
  </label>
</div>
`;

exports[`Radio should render with className 1`] = `
<div
  className="testClassname"
>
  <label
    className="Radio__label"
    htmlFor="testRadio"
  >
    <input
      checked={false}
      className="Radio__input"
      id="testRadio"
      onChange={[Function]}
      type="radio"
    />
    <svg
      className="Radio__svg"
      focusable="false"
      viewBox="0 0 200 200"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="Radio__circle Radio__circle_isHover"
        cx="100"
        cy="100"
        r="100"
      />
      <circle
        className="Radio__circle Radio__circle_isSelected"
        cx="100"
        cy="100"
        r="100"
      />
    </svg>
    <Text
      baseline={false}
      className="Radio__labelText"
      raw={true}
    >
      Still in role
    </Text>
  </label>
</div>
`;

exports[`Radio should render with simple props 1`] = `
<div
  className=""
>
  <label
    className="Radio__label"
    htmlFor="testRadio"
  >
    <input
      checked={false}
      className="Radio__input"
      id="testRadio"
      onChange={[Function]}
      type="radio"
    />
    <svg
      className="Radio__svg"
      focusable="false"
      viewBox="0 0 200 200"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="Radio__circle Radio__circle_isHover"
        cx="100"
        cy="100"
        r="100"
      />
      <circle
        className="Radio__circle Radio__circle_isSelected"
        cx="100"
        cy="100"
        r="100"
      />
    </svg>
    <Text
      baseline={false}
      className="Radio__labelText"
      raw={true}
    >
      Still in role
    </Text>
  </label>
</div>
`;
